# inbac

./: .dockerignore  Dockerfile  LICENSE  README.md  docker.sh  pyproject.toml
.circleci/: config.yml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: github_ci.yml  pythonpackage.yml
inbac/: controller.py  inbac.py  model.py  parse_arguments.py  view.py
tests/: test_inbac.py
