[tool.poetry]
name = "inbac"
version = "0.1.0"
description = ""
authors = ["Robert Węcławski <r.weclawski@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
pillow = "^6.2"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
pylint = "^2.4"

[tool.poetry.scripts]
inbac = "inbac.inbac:main"
test = "tests.test_inbac:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
